actualizacion de direccion

--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#portfolio">Clientes</a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class="nav-link" href="#reviews">Testimonios</a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class="nav-link" href="#team">Equipo</a>
             </li>
@@ -1009,7 +1009,7 @@
               <h5 class="mb-0 text-white">CONTACTO</h5>
               <div class="line"></div>
               <ul>
-                <li>Psje. 8 MZ E Lote 14 El Olivar - Los Olivos</li>
+                <li>Psje. 8 Mz E Lote 14 El Olivar - Los Olivos</li>
                 <li>
                   <a
                     rel="stylesheet"
