Creo que ya está mejor

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
       name="description"
       content="ZVZ Group es un estudio contable en Lima que ofrece servicios de contabilidad, asesoría tributaria, laboral y constitución de empresas."
     />
+    <meta
+      name="description"
+      content="ZVZ Group es un estudio contable en Lima especializado en servicios contables, tributarios y laborales. ¡Impulsa tu negocio con asesoría profesional y personalizada!"
+    />
 
     <title>ZVZ Group</title>
     <link
@@ -21,6 +25,14 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/@fancyapps/ui@5.0/dist/fancybox/fancybox.css"
     />
+    <!-- <link
+      href="https://api.fontshare.com/v2/css?f[]=clash-display@300,400&display=swap"
+      rel="stylesheet"
+    /> -->
+    <link
+      href="https://api.fontshare.com/v2/css?f[]=clash-display@300&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
   </head>
@@ -31,7 +43,7 @@
         <a class="navbar-brand" href="#">
           <img
             src="assets/images/logo-dark.png"
-            alt=""
+            alt="Asesoría contable y tributaria en Lima - ZVZ Group"
             class="img-fluid"
             width="100px"
             height="80"
@@ -48,12 +60,7 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div
-          class="collapse navbar-collapse"
-          id="navbarNav"
-          data-aos="fade-down"
-          data-aos-delay="150"
-        >
+        <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item">
               <a class="nav-link" href="#hero">Home</a>
@@ -80,7 +87,11 @@
               <a class="nav-link" href="#blog">Blog</a>
             </li> -->
           </ul>
-          <a href="" class="btn btn-brand ms-lg-3">Brochure</a>
+          <a
+            href="https://wa.me/51952284292?text=Hola,%20necesito%20más%20información%20sobre%20los%20servicios%20prestados."
+            class="btn btn-brand ms-lg-3"
+            >+51 952 284 292</a
+          >
         </div>
       </div>
     </nav>
@@ -94,11 +105,15 @@
               data-aos="fade-left"
             >
               ¡BIENVENIDOS! a ZVZ Consulting Group
+              <span class="seo"
+                >Estudio Contable en Lima - ZVZ Consulting Group</span
+              >
             </h1>
             <h5 class="text-white mt-3 mb-4" data-aos="fade-right">
-              Transformamos tu gestión financiera con soluciones contables
-              integrales, impulsando el crecimiento y la estabilidad de tu
-              negocio
+              Impulsa el crecimiento de tu negocio con soluciones contables,
+              tributarias y laborales en Lima. En ZVZ Group optimizamos tu
+              gestión financiera con servicios integrales, personalizados y
+              eficientes.
             </h5>
             <div data-aos="fade-up" data-aos-delay="50">
               <a href="#contact" class="btn btn-brand me-2">Contáctanos</a>
@@ -124,19 +139,23 @@
                 Somos un estudio contable especializado en brindar asesoría
                 personalizada a empresas y emprendedores en Perú. Nos enfocamos
                 en simplificar la gestión contable, tributaria y laboral, para
-                que tú puedas concentrarte en hacer crecer tu negocio
+                que tú puedas concentrarte en hacer crecer tu negocio.
               </p>
             </div>
           </div>
         </div>
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
-            <img src="./assets/images/about.webp" alt="" class="img-fluid" />
+            <img
+              src="./assets/images/about.webp"
+              alt="Asesoría contable y tributaria en Lima - ZVZ Group"
+              class="img-fluid"
+            />
           </div>
           <div class="col-lg-5" data-aos="fade-down" data-aos-delay="150">
             <div class="d-flex pt-4 mb-3"><h1>¿Por qué elegirnos?</h1></div>
             <p class="mt-3 mb4">
-              En ZVZ Consultin Group, contamos con un equipo de profesionales
+              En ZVZ Consultig Group, contamos con un equipo de profesionales
               comprometidos con la excelencia y la transparencia. Nuestra misión
               es ofrecer soluciones contables confiables y adaptadas a las
               necesidades de cada cliente, ya sea una pequeña empresa o una
@@ -236,9 +255,9 @@
               </div>
               <h5 class="mt-4 mb-3">Asesoría Contable</h5>
               <p>
-                Te orientamos en la correcta aplicación de normas contables,
-                ayudándote a optimizar procesos y tomar decisiones financieras
-                acertadas.
+                Te orientamos en la correcta aplicación de normas contables
+                vigentes, ayudándote a optimizar procesos internos, mejorar la
+                eficiencia operativa y tomar decisiones financieras acertadas.
               </p>
             </div>
           </div>
@@ -253,9 +272,9 @@
               </div>
               <h5 class="mt-4 mb-3">Asesoría Tributaria</h5>
               <p>
-                Gestionamos y planificamos tu carga tributaria para que cumplas
-                con la normativa peruana mientras maximizas tus beneficios
-                fiscales.
+                Gestionamos y planificamos tu carga tributaria de manera
+                estratégica, para que cumplas con la normativa peruana mientras
+                maximizas tus beneficios fiscales y evitas contingencias.
               </p>
             </div>
           </div>
@@ -379,100 +398,142 @@
           </div>
         </div>
         <div class="row g-4">
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
+          <div
+            class="col-md-4 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/project-1.jpg"
-                  alt=""
-                  class="img-fluid"
+                  src="./assets/images/alsi.png"
+                  alt="Asesoría
+                contable y tributaria en Lima - ZVZ Group"
+                  class="img-fluid portfolio-img"
                 />
               </div>
-              <a
+              <!-- <a
                 href="./assets/images/project-1.jpg"
+                alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                 data-fancybox="gallery"
                 class="iconbox"
                 ><i class="ri-search-2-line"></i
-              ></a>
-            </div>
-            <div class="portfolio-item image-zoom mt-4">
-              <div class="image-zoom-wrapper">
-                <img
-                  src="./assets/images/project-2.jpg"
-                  alt=""
-                  class="img-fluid"
-                />
-              </div>
-              <a
-                href="./assets/images/project-2.jpg"
-                data-fancybox="gallery"
-                class="iconbox"
-                ><i class="ri-search-2-line"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="250">
+          <div
+            class="col-md-4 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/project-3.jpg"
-                  alt=""
-                  class="img-fluid"
+                  src="./assets/images/emmanuel.png"
+                  alt="Asesoría
+                contable y tributaria en Lima - ZVZ Group"
+                  class="img-fluid portfolio-img"
                 />
               </div>
-              <a
-                href="./assets/images/project-3.jpg"
+              <!-- <a
+                href="./assets/images/project-1.jpg"
+                alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                 data-fancybox="gallery"
                 class="iconbox"
                 ><i class="ri-search-2-line"></i
-              ></a>
-            </div>
-            <div class="portfolio-item image-zoom mt-4">
-              <div class="image-zoom-wrapper">
-                <img
-                  src="./assets/images/project-4.jpg"
-                  alt=""
-                  class="img-fluid"
-                />
-              </div>
-              <a
-                href="./assets/images/project-4.jpg"
-                data-fancybox="gallery"
-                class="iconbox"
-                ><i class="ri-search-2-line"></i
-              ></a>
+              ></a> -->
             </div>
           </div>
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="350">
+          <div
+            class="col-md-4 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/project-5.jpg"
-                  alt=""
-                  class="img-fluid"
+                  src="./assets/images/aisa.svg"
+                  alt="Asesoría
+                contable y tributaria en Lima - ZVZ Group"
+                  class="img-fluid portfolio-img"
                 />
               </div>
-              <a
-                href="./assets/images/project-5.jpg"
+              <!-- <a
+                href="./assets/images/project-1.jpg"
+                alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                 data-fancybox="gallery"
                 class="iconbox"
                 ><i class="ri-search-2-line"></i
-              ></a>
+              ></a> -->
             </div>
-            <div class="portfolio-item image-zoom mt-4">
+          </div>
+          <div
+            class="col-md-4 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
+            <div class="portfolio-item image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/project-6.jpg"
-                  alt=""
-                  class="img-fluid"
+                  src="./assets/images/arcangel.jpeg"
+                  alt="Asesoría
+                contable y tributaria en Lima - ZVZ Group"
+                  class="img-fluid portfolio-img"
                 />
               </div>
-              <a
-                href="./assets/images/project-6.jpg"
+              <!-- <a
+                href="./assets/images/project-1.jpg"
+                alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                 data-fancybox="gallery"
                 class="iconbox"
                 ><i class="ri-search-2-line"></i
-              ></a>
+              ></a> -->
+            </div>
+          </div>
+          <div
+            class="col-md-4 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
+            <div class="portfolio-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img
+                  src="./assets/images/jya.jpeg"
+                  alt="Asesoría
+                contable y tributaria en Lima - ZVZ Group"
+                  class="img-fluid portfolio-img"
+                />
+              </div>
+              <!-- <a
+                href="./assets/images/project-1.jpg"
+                alt="Asesoría contable y tributaria en Lima - ZVZ Group"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-2-line"></i
+              ></a> -->
+            </div>
+          </div>
+          <div
+            class="col-md-4 text-center"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
+            <div class="portfolio-item image-zoom">
+              <div class="image-zoom-wrapper">
+                <img
+                  src="./assets/images/chavez.jpeg"
+                  alt="Asesoría
+                contable y tributaria en Lima - ZVZ Group"
+                  class="img-fluid portfolio-img"
+                />
+              </div>
+              <!-- <a
+                href="./assets/images/project-1.jpg"
+                alt="Asesoría contable y tributaria en Lima - ZVZ Group"
+                data-fancybox="gallery"
+                class="iconbox"
+                ><i class="ri-search-2-line"></i
+              ></a> -->
             </div>
           </div>
         </div>
@@ -697,7 +758,7 @@
       </div>
     </section> -->
     <!-- TEAM -->
-    <section id="team" class="section-padding">
+    <section id="team" class="section-padding border-top">
       <div class="container">
         <div class="row">
           <div
@@ -712,26 +773,34 @@
                 Detrás de cada servicio de calidad hay un equipo de expertos
                 comprometidos con el crecimiento de tu negocio. En ZVZ
                 Consulting Group, contamos con profesionales especializados en
-                contabilidad, tributación y asesoría laboral, que trabajan con
-                dedicación para ofrecerte soluciones personalizadas y
-                eficientes.
+                contabilidad, tributación y laboral, que trabajan con dedicación
+                para ofrecerte soluciones personalizadas y eficientes.
               </p>
             </div>
           </div>
         </div>
         <div class="row g-9 text-center">
-          <div class="col-md-4" data-aos="fade-down" data-aos-delay="150">
+          <div
+            class="col-md-4 d-flex mt-3"
+            data-aos="fade-down"
+            data-aos-delay="150"
+          >
             <div class="team-member image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/person-1.jpg"
-                  alt=""
+                  src="./assets/images/men.png"
+                  alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                   class="img-fluid"
                 />
               </div>
               <div class="team-member-content">
-                <h4 class="text-white">Noe Zavaleta Cardeña</h4>
+                <h4 class="text-white">Noe Zavaleta</h4>
                 <p class="mb-0 text-white">Gerente General</p>
+                <a
+                  href="https://www.linkedin.com/in/noe-zavaleta-cardeña/"
+                  target="_blank"
+                  ><i class="ri-linkedin-fill text-white"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -744,14 +813,17 @@
             <div class="team-member image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/person-2.jpg"
-                  alt=""
+                  src="./assets/images/women.png"
+                  alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                   class="img-fluid"
                 />
               </div>
               <div class="team-member-content">
-                <h4 class="text-white">Eliana Velasquez Mejía</h4>
+                <h4 class="text-white">Eliana Velasquez</h4>
                 <p class="mb-0 text-white">Contadora</p>
+                <a href="https://www.linkedin.com" target="_blank"
+                  ><i class="ri-linkedin-fill text-white"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -763,14 +835,17 @@
             <div class="team-member image-zoom">
               <div class="image-zoom-wrapper">
                 <img
-                  src="./assets/images/person-3.jpg"
-                  alt=""
+                  src="./assets/images/men.png"
+                  alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                   class="img-fluid"
                 />
               </div>
               <div class="team-member-content">
-                <h4 class="text-white">Jorge Zamora Solsol</h4>
-                <p class="mb-0 text-white">Asesor Tributario</p>
+                <h4 class="text-white">Jorge Zamora</h4>
+                <p class="mb-0 text-white">Contador</p>
+                <a href="https://www.linkedin.com" target="_blank"
+                  ><i class="ri-linkedin-fill text-white"></i
+                ></a>
               </div>
             </div>
           </div>
@@ -959,13 +1034,12 @@
               <a href="#">
                 <img
                   src="./assets/images/logo-white.png"
-                  alt=""
+                  alt="Asesoría contable y tributaria en Lima - ZVZ Group"
                   class="img-fluid"
-                  width="200"
+                  width="100"
                   height="100"
               /></a>
-              <div class="line"></div>
-              <p>
+              <p class="mt-1">
                 Nos especializamos en brindar asesoría contable, tributaria y
                 laboral personalizada para empresas y emprendedores en Perú.
               </p>
@@ -985,7 +1059,7 @@
             </div>
             <div class="col-lg-3 col-sm-6">
               <h5 class="mb-0 text-white">SERVICIOS</h5>
-              <div class="line"></div>
+              <div class="line bg-white"></div>
               <ul>
                 <li><a href="#">Outsourcing Contable</a></li>
                 <li><a href="#">Asesoría Contable</a></li>
@@ -997,7 +1071,7 @@
             </div>
             <div class="col-lg-3 col-sm-6">
               <h5 class="mb-0 text-white">NOSOTROS</h5>
-              <div class="line"></div>
+              <div class="line bg-white"></div>
               <ul>
                 <li><a href="#">Blog</a></li>
                 <li><a href="#">Servicios</a></li>
@@ -1007,12 +1081,11 @@
             </div>
             <div class="col-lg-3 col-sm-6">
               <h5 class="mb-0 text-white">CONTACTO</h5>
-              <div class="line"></div>
+              <div class="line bg-white"></div>
               <ul>
                 <li>Psje. 8 Mz E Lote 14 El Olivar - Los Olivos</li>
                 <li>
                   <a
-                    rel="stylesheet"
                     href="https://wa.me/51952284292?text=Hola,%20necesito%20más%20información%20sobre%20los%20servicios%20prestados."
                     >+51 952 284 292
                   </a>
