--- a/index.html
+++ b/index.html
@@ -1,18 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
       name="description"
-      content="ZVZ Group es un estudio contable en Lima que ofrece servicios de contabilidad, asesoría tributaria, laboral y constitución de empresas."
+      content="ZVZ Consulting Group, estudio contable en Lima, Perú. Especialistas en SUNAT, gestión tributaria y SIRE. Asesoría contable, tributaria y laboral para optimizar y cumplir con tus obligaciones."
     />
-    <meta
-      name="description"
-      content="ZVZ Group es un estudio contable en Lima especializado en servicios contables, tributarios y laborales. ¡Impulsa tu negocio con asesoría profesional y personalizada!"
-    />
-
-    <title>ZVZ Group</title>
+    <link rel="icon" type="image/png" href="assets/images/logo-dark.png" />
+    <title>ZVZ Consulting Group - Estudio Contable Lima</title>
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
@@ -109,12 +105,12 @@
                 >Estudio Contable en Lima - ZVZ Consulting Group</span
               >
             </h1>
-            <h5 class="text-white mt-3 mb-4" data-aos="fade-right">
+            <p class="text-white mt-3 mb-4" data-aos="fade-right">
               Impulsa el crecimiento de tu negocio con soluciones contables,
               tributarias y laborales en Lima. En ZVZ Group optimizamos tu
               gestión financiera con servicios integrales, personalizados y
               eficientes.
-            </h5>
+            </p>
             <div data-aos="fade-up" data-aos-delay="50">
               <a href="#contact" class="btn btn-brand me-2">Contáctanos</a>
               <a href="#services" class="btn btn-light ms-2">Servicios</a>
@@ -147,9 +143,9 @@
         <div class="row justify-content-between align-items-center">
           <div class="col-lg-6" data-aos="fade-down" data-aos-delay="50">
             <img
+              class="img-fluid about"
               src="./assets/images/about.webp"
               alt="Asesoría contable y tributaria en Lima - ZVZ Group"
-              class="img-fluid"
             />
           </div>
           <div class="col-lg-5" data-aos="fade-down" data-aos-delay="150">
